--- a/resources.yml
+++ b/resources.yml
@@ -2,7 +2,7 @@
   MyDynamoDBTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: notes-pranav-v3
+        TableName: notes-pranav-v3-${self:provider.stage}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: notesId
@@ -15,7 +15,7 @@
   cognitoUserPool: #logical name
     Type: AWS::Cognito::UserPool
     Properties:
-        UserPoolName: MyNotesUPP
+        UserPoolName: MyNotesUPP-${self:provider.stage}
 
  # user pool web client
   cognitoUserPoolWebClient: 
@@ -43,14 +43,14 @@
   cognitoUserPoolDomain:
      Type: AWS::Cognito::UserPoolDomain
      Properties: 
-           Domain: mynotespd
+           Domain: mynotespd-${self:provider.stage}
            UserPoolId: !Ref cognitoUserPool     
            
   # applications parameters   
   userPoolIdParam:
      Type: AWS::SSM::Parameter
      Properties:
-           Name: /notes/dev/userPoolId
+           Name: /notes/${self:provider.stage}/userPoolId
            Type: String
            Value: !GetAtt cognitoUserPool.Arn     
    
