--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,35 +3,30 @@ name: Deploy notes API
 on:
   push:
     branches:
-      - main  
-      # //triggered whenever we push main branch
+      - main
 
 jobs:
-  deploy: productionDeployment
-    name: production deployment
+  deploy-production:
+    name: Production Deployment
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: Production
       url: https://test.com
-      #  for referring to prod environment secrets
     strategy:
       matrix:
         node-version: [18.x]
     steps:
-    - uses: actions/checkout@v3
-    # here we are using github actions to checkout the entire code
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - name: Install Plugin and Deploy
-      uses: serverless/github-action@v3.2
-      with:
-        args: -c "serverless plugin install --name serverless-iam-roles-per-function && serverless deploy --stage production"
-        entrypoint: /bin/sh
-      env:
-        
-        # or if using AWS credentials directly
-         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - name: Install Plugin and Deploy
+        uses: serverless/github-action@v3.2
+        with:
+          args: -c "serverless plugin install --name serverless-iam-roles-per-function && serverless deploy --stage production"
+          entrypoint: /bin/sh
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
